app/assets/stylesheets/pages/_home.scss
html {
  scroll-behavior: smooth;
}

.landing-row-wrapper {
  background-color: white;
  width: 100%;
}

.nav-sign-up-btn {
  font-size: 20px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 4px;
  margin-right: 0;
}

.lp-sign-up-btn {
  font-size: 25px;
  font-weight: regular;
  padding: 15px 25px;
  background-color: #60CD45;
  color: white;
  border-radius: 40px;
}

.lp-sign-up-btn:hover {
  background-color: #49AE2F;
  color: white;
}


.landing-navbar-font-specs {
  font-weight: bold;
  font-size: 20px;
  color: $header-gray;
}

.landing-navbar-custom {
  margin-bottom: 0;
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
  text-transform: uppercase;
  font-family: 'Lato', 'sans-serif';
  color: $header-gray;
  padding: 0px 40px;
}

.landing-navbar-custom {
  padding: 10px 0;
  border-bottom: none;
  letter-spacing: 1px;
  background: #60CD44;
  background-image: -webkit-linear-gradient(-120deg, #60CD44 50%, white 50%);
}

.navbar-brand {
  margin-left: 50px;
}

.landing-nav-tabs {
  font-size: 20px;
}

.landing-navbar-custom a {
  color: $header-gray;
}

.landing-navbar-custom .nav li a:hover {
  color: rgba(255, 255, 255, 0.8);
  outline: none;
  background-color: #60CD44;
}

.landing-navbar-custom .nav li.active a {
  background-color: rgba(255, 255, 255, 0.3);
}


.landing-intro {
  padding: 100px 0px 0px 0px;
  text-align: center;
  height: 120vh;
  h1 {
    font-size: 40px;
    padding-bottom: 10px;
  }
  p {
    font-size: 35px;
    padding-bottom: 40px;
  }
}

.lp-dashboard-container {
  padding-top: 60px;
}

.dashboard-lp {
  width: 800px;
  height: auto;
  text-align: center;
  -webkit-box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.2);
}


.landing-section-wrapper {
padding: 20px 40px 0px 40px;
margin: 20px 20px 0px 20px;
}

.landing-compo-main-wrapper {
height: 100vh;
}

.landing-compo-top-wrapper {
  padding-top: 100px;
  padding-bottom: 80px;
}


.landing-compo-wrapper {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding-top: 20px;
}

.landing-compo-top-container h2 {
  font-size: 30px;
  padding-bottom: 20px;
}

.landing-compo-top-container p {
    font-size: 20px;
}

.col-icons {
  text-align: center;
  padding: 60px 20px;
  h3 {
  font-size: 25px;
  max-width: 512px;
  padding: 0px 70px;
  }
}

.style_image {
  width: 100px;
  padding-top: 10px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}


.landing-ending {
  width: 100%;
  height: 50vh;
  padding: 0px 0px 20px 0px;
  text-align: center;
  h1 {
    font-size: 40px;
    padding-bottom: 20px;
  }
  p {
    font-size: 30px;
    font-weight: light;
    padding-bottom: 30px;
  }
}

